kube/mongodemo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mongodemo
  name: mongodemo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongodemo
    spec:
      containers:
      - image: mongo:latest
        name: mongodemo
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}
