kube/navajo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: navajo
  name: navajo
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8182
      targetPort: 8181
  selector:
    io.kompose.service: navajo
status:
  loadBalancer: {}
