kube/navajo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: navajo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "navajo-static-ip"
spec:
  backend:
    serviceName: navajo 
    servicePort: 8181
